# ROS2_learn

./: readme.md
chapt2/chapt2_ws/: novel1.txt  novel2.txt  novel3.txt
chapt2/chapt2_ws/install/: local_setup.sh  setup.sh
chapt2/chapt2_ws/log/: latest_build
chapt2/chapt2_ws/src/demo_cpp_pkg/: CMakeLists.txt
chapt2/chapt2_ws/src/demo_cpp_pkg/src/: cpp_node.cpp  learn_thread.cpp  person_node.cpp
chapt2/chapt2_ws/src/demo_python_pkg/: package.xml  setup.py
chapt2/chapt2_ws/src/demo_python_pkg/demo_python_pkg/: learn_thread.py  person_node.py  python_node.py
chapt3/topic_practice_ws/install/: local_setup.sh  setup.sh
chapt3/topic_practice_ws/log/: latest_build
chapt3/topic_practice_ws/src/status_display/: CMakeLists.txt
chapt3/topic_practice_ws/src/status_display/src/: hello_qt.cpp  sys_status_display.cpp
chapt3/topic_practice_ws/src/status_interfaces/: CMakeLists.txt
chapt3/topic_practice_ws/src/status_publisher/: package.xml  setup.py
chapt3/topic_ws/install/: local_setup.sh  setup.sh
chapt3/topic_ws/log/: latest_build
chapt3/topic_ws/src/demo_cpp_topic/: CMakeLists.txt  package.xml
chapt3/topic_ws/src/demo_cpp_topic/src/: turtle_circle.cpp  turtle_control.cpp
chapt3/topic_ws/src/demo_python_topic/: package.xml  setup.py
chapt3/topic_ws/src/demo_python_topic/demo_python_topic/: baidu_demo.py  novel_sub_baidu_node.py
chapt4/chapt4_ws/src/chapt4_interfaces/: CMakeLists.txt  package.xml
chapt4/chapt4_ws/src/demo_cpp_service/: CMakeLists.txt  package.xml
chapt4/chapt4_ws/src/demo_python_service/: package.xml  setup.py
chapt4/chapt4_ws/src/learning_action/: package.xml  setup.py
chapt4/chapt4_ws/src/learning_interfaces/: CMakeLists.txt  package.xml
chapt4/chapt4_ws/src/learning_service/: package.xml  setup.py
chapt5/: rviz_tf.rviz
chapt5/bags/rosbag2_2025_12_04-18_22_48/: metadata.yaml  rosbag2_2025_12_04-18_22_48_0.db3
chapt5/chapt5_ws/src/demo_cpp_tf/: CMakeLists.txt  package.xml
chapt5/chapt5_ws/src/demo_python_tf/: package.xml  setup.py
practice/weather_ws/src/interfaces/: CMakeLists.txt  package.xml
practice/weather_ws/src/robot_cpp/: CMakeLists.txt  package.xml
practice/weather_ws/src/robot_cpp/launch/: system.launch.py
practice/weather_ws/src/robot_cpp/src/: console_node.cpp  simulator_node.cpp
practice/weather_ws/src/robot_py/: package.xml  setup.py
practice/weather_ws/src/weather_cpp/: CMakeLists.txt  package.xml
practice/weather_ws/src/weather_monitor_cpp/: CMakeLists.txt  package.xml
practice/weather_ws/src/weather_monitor_cpp/src/: client_node.cpp  monitor_node.cpp
practice/weather_ws/src/weather_monitor_py/: package.xml  setup.cfg  setup.py
practice/weather_ws/src/weather_py/: package.xml  setup.py
(+52 files in other folders)
