cmake_minimum_required(VERSION 3.8)
project(weather_monitor_cpp)

if(CMAKE_COMPILER_IS_GNUCXX OR CMAKE_CXX_COMPILER_ID MATCHES "Clang")
  add_compile_options(-Wall -Wextra -Wpedantic)
endif()

# find dependencies
find_package(ament_cmake REQUIRED)
find_package(rclcpp REQUIRED)
find_package(interfaces REQUIRED)
find_package(rcl_interfaces REQUIRED)

add_executable(monitor_node src/monitor_node.cpp)
add_executable(client_node src/client_node.cpp)

ament_target_dependencies(
  monitor_node
  rclcpp
  interfaces
  rcl_interfaces
)

ament_target_dependencies(
  client_node
  rclcpp
  interfaces
)
# 安装节点
install(
  TARGETS
  monitor_node
  client_node
  DESTINATION lib/${PROJECT_NAME}
)

if(BUILD_TESTING)
  find_package(ament_lint_auto REQUIRED)
  # the following line skips the linter which checks for copyrights
  # comment the line when a copyright and license is added to all source files
  set(ament_cmake_copyright_FOUND TRUE)
  # the following line skips cpplint (only works in a git repo)
  # comment the line when this package is in a git repo and when
  # a copyright and license is added to all source files
  set(ament_cmake_cpplint_FOUND TRUE)
  ament_lint_auto_find_test_dependencies()
endif()

ament_package()
